--- a/guias.html
+++ b/guias.html
@@ -2,146 +2,568 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Guías prácticas · Herramientas FECCCOOEx</title>
+  <title>Guías prácticas · Herramientas FECCOOEx</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
     * { box-sizing: border-box; }
-    body {
-      margin: 0;
+    body{
+      margin:0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f7f7f7;
-      color: #222;
+      background:#f3f4f6;
+      color:#222;
     }
 
     /* HEADER */
-    header {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      padding: 14px 24px;
-      background: #d60000;
-      color: #fff;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.25);
+    header{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:14px 24px;
+      background:#d60000;
+      color:#fff;
+      box-shadow:0 2px 6px rgba(0,0,0,0.25);
+      position:sticky;
+      top:0;
+      z-index:10;
     }
-    header img {
-      height: 52px;
+    header img{ height:52px; }
+    .titles h1{ margin:0; font-size:1.6rem; font-weight:700; }
+    .titles p{ margin:2px 0 0; font-size:0.9rem; opacity:0.95; }
+    nav a{
+      color:#fff; text-decoration:none; font-weight:600;
+      padding:6px 12px; border:1px solid rgba(255,255,255,0.7);
+      border-radius:999px; transition:0.2s ease;
     }
-    header .titles h1 {
-      margin: 0;
-      font-size: 1.5rem;
-      font-weight: 700;
-    }
-    header .titles p {
-      margin: 2px 0 0;
-      font-size: 0.9rem;
-      opacity: 0.9;
-    }
-
-    main {
-      max-width: 1100px;
-      margin: 24px auto 40px;
-      padding: 0 16px;
+    nav a:hover{
+      background:rgba(255,255,255,0.18);
+      transform: translateY(-1px);
+      box-shadow:0 2px 6px rgba(0,0,0,0.25);
     }
 
-    .block {
-      background: #fff;
+    /* MAIN */
+    main{
+      max-width: 1180px;
+      margin: 26px auto 40px;
+      padding: 0 16px 40px;
+    }
+
+    .btn-volver{
+      display:inline-block;
+      margin-bottom:16px;
+      padding:6px 10px;
+      border-radius:6px;
+      background:#d60000;
+      color:#fff;
+      font-size:0.9rem;
+      font-weight:600;
+      text-decoration:none;
+      transition: background 0.15s;
+    }
+    .btn-volver:hover{ background:#b40000; }
+
+    .page-title{ margin: 0 0 6px; font-size:1.6rem; }
+    .page-subtitle{ margin:0 0 14px; color:#444; font-size:0.95rem; }
+
+    .card{
+      background:#fff;
+      border:1px solid #e1e4ea;
+      border-radius: 12px;
+      box-shadow:0 3px 10px rgba(0,0,0,0.10);
+      padding: 14px 16px 16px;
+      margin-bottom: 14px;
+    }
+
+    /* filtros */
+    .filters{
+      display:grid;
+      grid-template-columns: 1.2fr 1.2fr 1fr;
+      gap: 10px;
+      align-items:end;
+    }
+    @media (max-width: 980px){
+      .filters{ grid-template-columns: 1fr; }
+    }
+
+    label{
+      font-size:0.82rem;
+      font-weight:800;
+      color:#555;
+      display:block;
+      margin-bottom:4px;
+    }
+    select, input{
+      width:100%;
+      font-family: inherit;
+      font-size:0.95rem;
+      padding: 8px 10px;
       border-radius: 8px;
-      padding: 18px 20px;
-      margin-bottom: 18px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
-      transition: transform 0.15s ease, box-shadow 0.15s ease;
-    }
-    .block:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.12);
-    }
-    .block h2 {
-      margin: 0 0 8px;
-      font-size: 1.25rem;
-      color: #d60000;
-    }
-    .block p {
-      margin: 0 0 8px;
-      font-size: 0.95rem;
-      color: #444;
-    }
-    .tags {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 6px;
-      margin-top: 8px;
-      font-size: 0.85rem;
-    }
-    .tag {
-      padding: 3px 8px;
-      border-radius: 999px;
-      background: #ffe5e5;
-      color: #6b0000;
+      border:1px solid #cbd5e1;
+      background:#fff;
     }
 
-    footer {
-      font-size: 0.75rem;
-      text-align: center;
-      padding: 12px;
-      color: #444;
-      border-top: 1px solid #e0e0e0;
-      background: #fafafa;
+    .hint{
+      margin-top: 10px;
+      font-size: 0.83rem;
+      color:#555;
+      background:#f9fafb;
+      border: 1px dashed #e5e7eb;
+      border-radius: 10px;
+      padding: 10px 12px;
     }
-    footer img {
-      height: 22px;
-      vertical-align: middle;
-      margin-right: 6px;
+
+    /* grid de guías */
+    .grid{
+      display:grid;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      gap: 12px;
+    }
+    @media (max-width: 1080px){
+      .grid{ grid-template-columns: repeat(2, minmax(0, 1fr)); }
+    }
+    @media (max-width: 700px){
+      .grid{ grid-template-columns: 1fr; }
+    }
+
+    .guide{
+      background:#fff;
+      border:1px solid #e1e4ea;
+      border-radius: 14px;
+      box-shadow:0 3px 10px rgba(0,0,0,0.10);
+      padding: 14px 14px 12px;
+      display:flex;
+      flex-direction:column;
+      gap: 8px;
+      transition: transform 0.15s ease, box-shadow 0.15s ease;
+      min-height: 210px;
+    }
+    .guide:hover{
+      transform: translateY(-2px);
+      box-shadow:0 10px 22px rgba(0,0,0,0.14);
+    }
+
+    .guide-top{
+      display:flex;
+      gap:10px;
+      align-items:flex-start;
+    }
+    .badge{
+      font-size:0.75rem;
+      font-weight:900;
+      padding: 3px 10px;
+      border-radius: 999px;
+      background:#f3f4f6;
+      color:#374151;
+      border: 1px solid #e5e7eb;
+      white-space: nowrap;
+    }
+
+    .title{
+      margin:0;
+      font-size:1.05rem;
+      font-weight:900;
+      color:#111827;
+      line-height: 1.2rem;
+    }
+    .desc{
+      margin:0;
+      color:#374151;
+      font-size:0.92rem;
+      line-height: 1.25rem;
+      flex: 1;
+    }
+
+    .meta{
+      font-size:0.82rem;
+      color:#555;
+      display:flex;
+      flex-direction:column;
+      gap:4px;
+    }
+
+    .actions{
+      display:flex;
+      gap:10px;
+      flex-wrap: wrap;
+      margin-top: 4px;
+    }
+
+    .btn{
+      border:none;
+      border-radius: 10px;
+      padding: 9px 12px;
+      font-weight:900;
+      cursor:pointer;
+      text-decoration:none;
+      display:inline-block;
+      transition: transform 0.15s, box-shadow 0.15s, background 0.15s;
+    }
+    .btn-primary{
+      background:#d60000;
+      color:#fff;
+    }
+    .btn-primary:hover{
+      background:#b40000;
+      transform: translateY(-1px);
+      box-shadow:0 6px 16px rgba(0,0,0,0.18);
+    }
+    .btn-secondary{
+      background:#111827;
+      color:#fff;
+    }
+    .btn-secondary:hover{
+      transform: translateY(-1px);
+      box-shadow:0 6px 16px rgba(0,0,0,0.18);
+    }
+
+    .muted{ color:#6b7280; font-size:0.82rem; }
+
+    /* FOOTER institucional */
+    footer{
+      background:#222;
+      color:#f2f2f2;
+      padding:18px 20px 10px;
+      border-top:3px solid #d60000;
+      font-size:0.85rem;
+      margin-top: 10px;
+    }
+    .footer-inner{
+      max-width:1300px;
+      margin:0 auto;
+      display:grid;
+      grid-template-columns: 2fr 1.2fr 1.2fr;
+      gap:16px;
+    }
+    @media (max-width: 900px){
+      .footer-inner{ grid-template-columns: 1fr; }
+    }
+    .footer-col h3{
+      margin:0 0 6px;
+      font-size:0.95rem;
+      text-transform:uppercase;
+      letter-spacing:0.03em;
+      color:#fff;
+    }
+    .footer-col p{
+      margin:0 0 4px;
+      font-size:0.82rem;
+      color:#e0e0e0;
+    }
+    .footer-col a{
+      color:#ffdddd;
+      text-decoration:none;
+      font-size:0.82rem;
+    }
+    .footer-col a:hover{ text-decoration:underline; }
+
+    .footer-logo-row{
+      display:flex;
+      align-items:center;
+      gap:10px;
+      margin-bottom:6px;
+    }
+    .footer-logo-row img{
+      height:30px;
+      background:#d60000;
+      padding:3px 6px;
+      border-radius:4px;
+    }
+
+    .footer-bottom{
+      max-width:1300px;
+      margin:10px auto 0;
+      border-top:1px solid #444;
+      padding-top:6px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      gap:8px;
+      flex-wrap:wrap;
+    }
+    .footer-bottom-left{
+      display:flex;
+      align-items:center;
+      gap:6px;
+      font-size:0.78rem;
+      color:#e0e0e0;
+    }
+    .footer-bottom-left img{ height:18px; }
+
+    .footer-bottom-right{
+      font-size:0.78rem;
+      color:#bbbbbb;
+      text-align:right;
+    }
+    @media (max-width: 600px){
+      .footer-bottom{ flex-direction:column; align-items:flex-start; }
+      .footer-bottom-right{ text-align:left; }
     }
   </style>
 </head>
-<body>
 
-  <header>
+<body>
+<header>
+  <div style="display:flex; align-items:center; gap:16px;">
     <img src="img/feccooex.png" alt="FECCOOEx">
     <div class="titles">
-      <h1>Guías prácticas</h1>
-      <p>Orientaciones breves sobre temas clave de la acción sindical en educación</p>
+      <h1>Herramientas FECCOOEx</h1>
+      <p>Recursos públicos y sindicales para la comunidad educativa</p>
     </div>
-  </header>
+  </div>
+  <nav>
+    <a href="delegados.html">Área delegados/as</a>
+  </nav>
+</header>
 
-  <main>
-    <section class="block">
-      <h2>Descripción de la sección</h2>
-      <p>
-        En este espacio se recopilarán guías prácticas sobre cuestiones habituales en los centros educativos:
-        jornada, permisos, ratios, salud laboral, convivencia, inclusión, etc.
-      </p>
-      <p>
-        Las guías tendrán un formato breve y claro, para ser utilizadas por delegados y delegadas, así como por el
-        conjunto del profesorado.
-      </p>
-    </section>
+<main>
+  <a class="btn-volver" href="index.html">Volver a la portada</a>
 
-    <section class="block">
-      <h2>Bloques temáticos previstos</h2>
-      <p>Algunos posibles apartados dentro de esta sección:</p>
-      <ul style="margin: 6px 0 0 18px; font-size:0.9rem;">
-        <li>Jornada y horarios lectivos / complementarios</li>
-        <li>Permisos y licencias</li>
-        <li>Prevención de riesgos laborales y salud laboral</li>
-        <li>Convivencia escolar y clima de centro</li>
-        <li>Educación especial, inclusión y atención a la diversidad</li>
-        <li>Digitalización, teletrabajo y uso de plataformas</li>
-      </ul>
-      <div class="tags">
-        <span class="tag">Jornada</span>
-        <span class="tag">Permisos</span>
-        <span class="tag">PRL</span>
-        <span class="tag">Convivencia</span>
-        <span class="tag">Inclusión</span>
-        <span class="tag">Digitalización</span>
+  <h1 class="page-title">Guías prácticas</h1>
+  <p class="page-subtitle">
+    Guías orientativas y recursos de apoyo para el personal del ámbito educativo. Para casos concretos, utiliza <a href="consultas.html">Consultas sindicales</a>.
+  </p>
+
+  <section class="card">
+    <div class="filters">
+      <div>
+        <label for="f-tema">Temática</label>
+        <select id="f-tema">
+          <option value="">Todas</option>
+        </select>
       </div>
-    </section>
-  </main>
 
-  <footer>
-    <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" alt="Licencia CC BY-ND">
-    Este contenido se distribuye bajo licencia <strong>Creative Commons BY-ND 4.0</strong>, permitiendo compartir sin modificaciones y con atribución.
-  </footer>
+      <div>
+        <label for="f-texto">Buscar</label>
+        <input id="f-texto" type="text" placeholder="Título, descripción, destinatarios…">
+      </div>
+
+      <div>
+        <label for="f-ambito">Ámbito</label>
+        <select id="f-ambito">
+          <option value="">Todos</option>
+          <option value="docente">Docente</option>
+          <option value="laboral">Laboral</option>
+          <option value="ambos">Ambos</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="hint">
+      Consejo: empieza por elegir una <strong>temática</strong> y luego usa el buscador para afinar.
+    </div>
+  </section>
+
+  <section class="card">
+    <div id="status" class="muted">Cargando guías…</div>
+    <div id="grid" class="grid" style="margin-top:12px;"></div>
+  </section>
+</main>
+
+<footer>
+  <div class="footer-inner">
+    <div class="footer-col">
+      <div class="footer-logo-row">
+        <img src="img/feccooex.png" alt="FECCOOEx">
+        <div>
+          <strong>Federación de Enseñanza de CCOO de Extremadura</strong><br>
+          <span style="font-size:0.8rem;">Herramientas digitales para la acción sindical y la comunidad educativa.</span>
+        </div>
+      </div>
+      <p>Este espacio reúne recursos públicos y sindicales para mejorar las condiciones de trabajo y la calidad de la educación en Extremadura.</p>
+    </div>
+
+    <div class="footer-col">
+      <h3>Contacto</h3>
+      <p><strong>Dirección:</strong><br>
+        Avenida Juan Carlos I, nº 47<br>
+        CP 06800 · Mérida (Extremadura)
+      </p>
+      <p><strong>Teléfono:</strong> 924 330 018</p>
+      <p><strong>Correo:</strong> <a href="mailto:educacion@extremadura.ccoo.es">educacion@extremadura.ccoo.es</a></p>
+    </div>
+
+    <div class="footer-col">
+      <h3>Enlaces rápidos</h3>
+      <p><a href="https://extremadura.fe.ccoo.es/" target="_blank">Web FECCOOExtremadura</a></p>
+      <p><a href="https://www.facebook.com/feccooex" target="_blank">Facebook FECCOOEx</a></p>
+      <p><a href="https://x.com/FECCOOex" target="_blank">X (Twitter) FECCOOEx</a></p>
+      <p><a href="https://www.instagram.com/feccooex" target="_blank">Instagram FECCOOEx</a></p>
+      <p><a href="https://t.me/feccooextremadura" target="_blank">Canal de Telegram FECCOOExtremadura</a></p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <div class="footer-bottom-left">
+      <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" alt="Licencia CC BY-ND">
+      <span>Contenido bajo licencia Creative Commons BY-ND 4.0 (se permite compartir sin modificaciones y con atribución).</span>
+    </div>
+    <div class="footer-bottom-right">
+      © <span id="anio-footer"></span> Federación de Enseñanza de CCOO de Extremadura
+    </div>
+  </div>
+
+  <script>
+    document.getElementById('anio-footer').textContent = new Date().getFullYear();
+  </script>
+</footer>
+
+<script>
+  const CSV_TEMAS = "temas_guias.csv";
+  const CSV_GUIAS = "guias.csv";
+
+  const fTema = document.getElementById("f-tema");
+  const fTexto = document.getElementById("f-texto");
+  const fAmbito = document.getElementById("f-ambito");
+  const grid = document.getElementById("grid");
+  const statusEl = document.getElementById("status");
+
+  let temas = [];
+  let guias = [];
+
+  function parseCSV(text){
+    const lines = text.trim().split(/\r?\n/);
+    if (!lines.length) return [];
+    const delimiter = lines[0].includes(";") ? ";" : ",";
+    const headers = lines[0].split(delimiter).map(h => h.trim());
+
+    return lines.slice(1).filter(l => l.trim()).map(line => {
+      const cols = line.split(delimiter).map(c => c.trim());
+      const obj = {};
+      headers.forEach((h,i) => obj[h] = cols[i] ?? "");
+      return obj;
+    });
+  }
+
+  async function loadCSV(path){
+    const resp = await fetch(path, { cache: "no-store" });
+    if (!resp.ok) throw new Error("No se pudo cargar " + path);
+    return await resp.text();
+  }
+
+  function normalize(s){ return (s || "").toLowerCase().trim(); }
+
+  function buildTemaMap(){
+    const map = new Map();
+    temas.forEach(t => map.set(t.id_tema, t));
+    return map;
+  }
+
+  function render(){
+    const temaVal = normalize(fTema.value);
+    const textVal = normalize(fTexto.value);
+    const ambVal  = normalize(fAmbito.value);
+
+    const temaMap = buildTemaMap();
+
+    const filtered = guias.filter(g => {
+      if (normalize(g.activa) === "0") return false;
+
+      // filtro tema
+      if (temaVal && normalize(g.tema) !== temaVal) return false;
+
+      // filtro ámbito
+      if (ambVal && normalize(g.ambito) !== ambVal) return false;
+
+      // filtro texto
+      if (textVal){
+        const hay = [
+          g.titulo, g.descripcion, g.destinatarios, g.tema
+        ].map(normalize).join(" ");
+        if (!hay.includes(textVal)) return false;
+      }
+
+      return true;
+    });
+
+    statusEl.textContent = filtered.length
+      ? `Mostrando ${filtered.length} guía(s).`
+      : "No hay resultados con los filtros actuales.";
+
+    grid.innerHTML = "";
+
+    filtered.forEach(g => {
+      const t = temaMap.get(g.tema);
+      const temaLabel = t ? t.tema : (g.tema || "Sin tema");
+
+      const el = document.createElement("article");
+      el.className = "guide";
+
+      const badge = document.createElement("span");
+      badge.className = "badge";
+      badge.textContent = temaLabel;
+
+      const title = document.createElement("h3");
+      title.className = "title";
+      title.textContent = g.titulo || "Guía";
+
+      const desc = document.createElement("p");
+      desc.className = "desc";
+      desc.textContent = g.descripcion || "";
+
+      const meta = document.createElement("div");
+      meta.className = "meta";
+      meta.innerHTML = `
+        <div><strong>Destinatarios:</strong> ${g.destinatarios || "-"}</div>
+        <div><strong>Actualización:</strong> ${g.ultima_actualizacion || "-"}</div>
+        <div><strong>Tipo:</strong> ${(g.tipo || "-").toUpperCase()}</div>
+      `;
+
+      const actions = document.createElement("div");
+      actions.className = "actions";
+
+      const url = (g.url || "").trim();
+
+      const btn = document.createElement("a");
+      btn.className = "btn btn-primary";
+      btn.href = url || "#";
+      btn.textContent = (normalize(g.tipo) === "pdf") ? "Descargar" : "Abrir guía";
+      if (!url) btn.style.opacity = "0.5";
+      if (!url) btn.style.pointerEvents = "none";
+
+      actions.appendChild(btn);
+
+      el.appendChild(badge);
+      el.appendChild(title);
+      el.appendChild(desc);
+      el.appendChild(meta);
+      el.appendChild(actions);
+
+      grid.appendChild(el);
+    });
+  }
+
+  async function init(){
+    try{
+      const temasText = await loadCSV(CSV_TEMAS);
+      temas = parseCSV(temasText)
+        .filter(t => (t.activo ?? "1").trim() !== "0")
+        .sort((a,b) => Number(a.orden || 9999) - Number(b.orden || 9999));
+
+      // poblar selector de temas
+      fTema.innerHTML = '<option value="">Todas</option>';
+      temas.forEach(t => {
+        const opt = document.createElement("option");
+        opt.value = (t.id_tema || "").trim();
+        opt.textContent = (t.tema || "").trim();
+        fTema.appendChild(opt);
+      });
+
+      const guiasText = await loadCSV(CSV_GUIAS);
+      guias = parseCSV(guiasText);
+
+      render();
+    }catch(e){
+      console.error(e);
+      statusEl.textContent = "No se pudieron cargar los datos. Revisa que temas_guias.csv y guias.csv estén en la misma carpeta que guias.html.";
+    }
+  }
+
+  fTema.addEventListener("change", render);
+  fAmbito.addEventListener("change", render);
+  fTexto.addEventListener("input", () => { render(); });
+
+  init();
+</script>
 
 </body>
 </html>
