--- a/consultas.html
+++ b/consultas.html
@@ -7,7 +7,6 @@
 
   <style>
     * { box-sizing: border-box; }
-
     body{
       margin:0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -29,25 +28,12 @@
       z-index:10;
     }
     header img{ height:52px; }
-
-    .titles h1{
-      margin:0;
-      font-size:1.6rem;
-      font-weight:700;
-    }
-    .titles p{
-      margin:2px 0 0;
-      font-size:0.9rem;
-      opacity:0.95;
-    }
+    .titles h1{ margin:0; font-size:1.6rem; font-weight:700; }
+    .titles p{ margin:2px 0 0; font-size:0.9rem; opacity:0.95; }
     nav a{
-      color:#fff;
-      text-decoration:none;
-      font-weight:600;
-      padding:6px 12px;
-      border:1px solid rgba(255,255,255,0.7);
-      border-radius:999px;
-      transition:0.2s ease;
+      color:#fff; text-decoration:none; font-weight:600;
+      padding:6px 12px; border:1px solid rgba(255,255,255,0.7);
+      border-radius:999px; transition:0.2s ease;
     }
     nav a:hover{
       background:rgba(255,255,255,0.18);
@@ -70,21 +56,14 @@
       background:#d60000;
       color:#fff;
       font-size:0.9rem;
-      font-weight:600;
+      font-weight:700;
       text-decoration:none;
       transition: background 0.15s;
     }
     .btn-volver:hover{ background:#b40000; }
 
-    .page-title{
-      margin: 0 0 6px;
-      font-size:1.6rem;
-    }
-    .page-subtitle{
-      margin:0 0 14px;
-      color:#444;
-      font-size:0.95rem;
-    }
+    .page-title{ margin: 0 0 6px; font-size:1.6rem; }
+    .page-subtitle{ margin:0 0 14px; color:#444; font-size:0.95rem; line-height:1.25rem; }
 
     .card{
       background:#fff;
@@ -92,71 +71,70 @@
       border-radius: 12px;
       box-shadow:0 3px 10px rgba(0,0,0,0.10);
       padding: 14px 16px 16px;
-    }
-
-    .form-grid{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 12px 14px;
-      margin-top: 12px;
-    }
-    @media (max-width: 820px){
-      .form-grid{ grid-template-columns: 1fr; }
+      margin-bottom: 14px;
     }
 
     label{
       font-size:0.82rem;
-      font-weight:700;
+      font-weight:900;
       color:#555;
       display:block;
-      margin-bottom:4px;
+      margin:10px 0 4px;
     }
-
     input, select, textarea{
       width:100%;
       font-family: inherit;
       font-size:0.95rem;
-      padding: 8px 10px;
-      border-radius: 8px;
+      padding: 9px 10px;
+      border-radius: 10px;
       border:1px solid #cbd5e1;
       background:#fff;
     }
+    textarea{ min-height: 140px; resize: vertical; }
 
-    textarea{
-      min-height: 140px;
-      resize: vertical;
+    .row2{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+    }
+    @media (max-width: 860px){
+      .row2{ grid-template-columns: 1fr; }
     }
 
-    .row-full{ grid-column: 1 / -1; }
-
-    .checks{
-      display:flex;
-      gap:8px;
-      align-items:flex-start;
-      font-size:0.85rem;
-      color:#333;
-      line-height: 1.25rem;
-      margin-top: 4px;
+    .help{
+      font-size:0.82rem;
+      color:#6b7280;
+      margin-top:6px;
+      line-height:1.2rem;
     }
-    .checks input{ width:auto; margin-top:4px; }
+
+    .notice{
+      background:#f9fafb;
+      border: 1px dashed #e5e7eb;
+      border-radius: 12px;
+      padding: 10px 12px;
+      color:#4b5563;
+      font-size:0.88rem;
+      line-height:1.25rem;
+    }
 
     .actions{
       display:flex;
       gap:10px;
+      flex-wrap:wrap;
+      margin-top: 12px;
       align-items:center;
-      flex-wrap: wrap;
-      margin-top: 14px;
     }
-
     .btn{
       border:none;
       border-radius: 10px;
       padding: 10px 14px;
-      font-weight:800;
+      font-weight:900;
       cursor:pointer;
+      text-decoration:none;
+      display:inline-block;
       transition: transform 0.15s, box-shadow 0.15s, background 0.15s;
     }
-
     .btn-primary{
       background:#d60000;
       color:#fff;
@@ -166,7 +144,6 @@
       transform: translateY(-1px);
       box-shadow:0 6px 16px rgba(0,0,0,0.18);
     }
-
     .btn-secondary{
       background:#111827;
       color:#fff;
@@ -176,30 +153,112 @@
       box-shadow:0 6px 16px rgba(0,0,0,0.18);
     }
 
-    .hint{
-      margin-top: 14px;
-      font-size: 0.82rem;
-      color:#555;
-      background:#f9fafb;
-      border: 1px dashed #e5e7eb;
-      border-radius: 10px;
-      padding: 10px 12px;
+    .ok{
+      display:none;
+      background:#ecfdf5;
+      border:1px solid #a7f3d0;
+      color:#065f46;
+      border-radius:12px;
+      padding:10px 12px;
+      font-weight:800;
+      margin-top:12px;
+    }
+    .err{
+      display:none;
+      background:#fef2f2;
+      border:1px solid #fecaca;
+      color:#7f1d1d;
+      border-radius:12px;
+      padding:10px 12px;
+      font-weight:800;
+      margin-top:12px;
     }
 
-    /* FOOTER */
+    /* FOOTER institucional */
     footer{
       background:#222;
       color:#f2f2f2;
       padding:18px 20px 10px;
       border-top:3px solid #d60000;
       font-size:0.85rem;
-      margin-top: 20px;
+      margin-top: 10px;
+    }
+    .footer-inner{
+      max-width:1300px;
+      margin:0 auto;
+      display:grid;
+      grid-template-columns: 2fr 1.2fr 1.2fr;
+      gap:16px;
+    }
+    @media (max-width: 900px){
+      .footer-inner{ grid-template-columns: 1fr; }
+    }
+    .footer-col h3{
+      margin:0 0 6px;
+      font-size:0.95rem;
+      text-transform:uppercase;
+      letter-spacing:0.03em;
+      color:#fff;
+    }
+    .footer-col p{
+      margin:0 0 4px;
+      font-size:0.82rem;
+      color:#e0e0e0;
+      line-height:1.2rem;
+    }
+    .footer-col a{
+      color:#ffdddd;
+      text-decoration:none;
+      font-size:0.82rem;
+    }
+    .footer-col a:hover{ text-decoration:underline; }
+
+    .footer-logo-row{
+      display:flex;
+      align-items:center;
+      gap:10px;
+      margin-bottom:6px;
+    }
+    .footer-logo-row img{
+      height:30px;
+      background:#d60000;
+      padding:3px 6px;
+      border-radius:4px;
+    }
+
+    .footer-bottom{
+      max-width:1300px;
+      margin:10px auto 0;
+      border-top:1px solid #444;
+      padding-top:6px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      gap:8px;
+      flex-wrap:wrap;
+    }
+    .footer-bottom-left{
+      display:flex;
+      align-items:center;
+      gap:6px;
+      font-size:0.78rem;
+      color:#e0e0e0;
+    }
+    .footer-bottom-left img{ height:18px; }
+
+    .footer-bottom-right{
+      font-size:0.78rem;
+      color:#bbbbbb;
+      text-align:right;
+    }
+    @media (max-width: 600px){
+      .footer-bottom{ flex-direction:column; align-items:flex-start; }
+      .footer-bottom-right{ text-align:left; }
     }
   </style>
 </head>
 
 <body>
-
 <header>
   <div style="display:flex; align-items:center; gap:16px;">
     <img src="img/feccooex.png" alt="FECCOOEx">
@@ -208,7 +267,6 @@
       <p>Recursos públicos y sindicales para la comunidad educativa</p>
     </div>
   </div>
-
   <nav>
     <a href="delegados.html">Área delegados/as</a>
   </nav>
@@ -220,142 +278,154 @@
   <h1 class="page-title">Consultas sindicales</h1>
   <p class="page-subtitle">
     A través de este formulario se pueden plantear las consultas y sugerencias de carácter laboral que se consideren.
+    Si es una urgencia, usa el <a href="chat.html">chat público</a> cuando haya delegados/as disponibles.
   </p>
 
   <section class="card">
-    <form id="form-consultas">
-      <div class="form-grid">
+    <div class="notice">
+      <strong>Protección de datos:</strong> los datos aportados se utilizarán exclusivamente para atender esta consulta y gestionar la respuesta.
+      No se publicarán en la web ni se usarán con fines distintos.
+    </div>
 
+    <form id="form-consultas">
+      <div class="row2">
         <div>
           <label for="nombre">Nombre y apellidos</label>
-          <input id="nombre" type="text" required>
+          <input id="nombre" name="nombre" type="text" placeholder="Escribe tu nombre" required />
         </div>
-
         <div>
-          <label for="email">Correo de contacto</label>
-          <input id="email" type="email" required>
+          <label for="correo">Correo electrónico</label>
+          <input id="correo" name="correo" type="email" placeholder="tu@email.com" required />
         </div>
+      </div>
 
+      <div class="row2">
         <div>
           <label for="telefono">Teléfono (opcional)</label>
-          <input id="telefono" type="tel">
-        </div>
-
-        <div>
-          <label for="centro">Centro / servicio (opcional)</label>
-          <input id="centro" type="text">
-        </div>
-
-        <div>
-          <label for="municipio">Municipio (opcional)</label>
-          <input id="municipio" type="text">
+          <input id="telefono" name="telefono" type="tel" placeholder="Ej. 600 000 000" />
+          <div class="help">Solo si quieres que te llamemos para aclarar detalles.</div>
         </div>
 
         <div>
           <label for="tema">Tema principal</label>
-          <select id="tema" required>
-            <option value="">Cargando temáticas…</option>
+          <!-- Si más adelante lo conectas a tema_consulta.csv, se puede poblar dinámicamente -->
+          <select id="tema" name="tema" required>
+            <option value="">Selecciona un tema</option>
+            <option>Jornada y horarios</option>
+            <option>Permisos y licencias</option>
+            <option>Retribuciones</option>
+            <option>Interinos y sustituciones</option>
+            <option>Conciliación</option>
+            <option>Salud laboral</option>
+            <option>Otros</option>
           </select>
         </div>
-
-        <div class="row-full">
-          <label for="asunto">Asunto</label>
-          <input id="asunto" type="text" required>
-        </div>
-
-        <div class="row-full">
-          <label for="mensaje">Consulta / sugerencia</label>
-          <textarea id="mensaje" required></textarea>
-        </div>
-
-        <div class="row-full checks">
-          <input id="consentimiento" type="checkbox" required>
-          <label for="consentimiento">
-            He leído y acepto que los datos facilitados se utilicen exclusivamente para la gestión y respuesta de esta consulta, conforme a la normativa de protección de datos.
-          </label>
-        </div>
-
       </div>
+
+      <label for="centro">Centro / localidad (opcional)</label>
+      <input id="centro" name="centro" type="text" placeholder="Centro, municipio, provincia..." />
+
+      <label for="mensaje">Consulta o sugerencia</label>
+      <textarea id="mensaje" name="mensaje" placeholder="Describe el caso con el máximo detalle posible (fechas, documento recibido, horario, etc.)" required></textarea>
 
       <div class="actions">
         <button class="btn btn-primary" type="submit">Enviar consulta</button>
-        <button class="btn btn-secondary" type="button" id="btn-limpiar">Limpiar formulario</button>
+        <a class="btn btn-secondary" href="mailto:educacion@extremadura.ccoo.es">Enviar por correo</a>
       </div>
 
-      <div class="hint">
-        <strong>Protección de datos</strong><br>
-        Los datos personales facilitados serán tratados por la Federación de Enseñanza de CCOO de Extremadura con la
-        única finalidad de gestionar y responder a la consulta planteada. No se utilizarán para fines comerciales ni
-        se cederán a terceros, salvo obligación legal.
-        <br><br>
-        <strong>Correo de contacto:</strong> educacion@extremadura.ccoo.es
-      </div>
+      <div id="ok" class="ok">Consulta preparada. Se abrirá tu correo para enviarla a la Federación.</div>
+      <div id="err" class="err">No se pudo preparar el envío. Revisa los campos e inténtalo de nuevo.</div>
     </form>
+
+    <p class="help" style="margin-top:10px;">
+      Destinatario: <strong>educacion@extremadura.ccoo.es</strong>
+    </p>
   </section>
 </main>
 
+<footer>
+  <div class="footer-inner">
+    <div class="footer-col">
+      <div class="footer-logo-row">
+        <img src="img/feccooex.png" alt="FECCOOEx">
+        <div>
+          <strong>Federación de Enseñanza de CCOO de Extremadura</strong><br>
+          <span style="font-size:0.8rem;">Herramientas digitales para la acción sindical y la comunidad educativa.</span>
+        </div>
+      </div>
+      <p>Este espacio reúne recursos públicos y sindicales para mejorar las condiciones de trabajo y la calidad de la educación en Extremadura.</p>
+    </div>
+
+    <div class="footer-col">
+      <h3>Contacto</h3>
+      <p><strong>Dirección:</strong><br>
+        Avenida Juan Carlos I, núm. 47<br>
+        CP 06800 · Mérida (Extremadura)
+      </p>
+      <p><strong>Teléfono:</strong> 924330018</p>
+      <p><strong>Correo:</strong> <a href="mailto:educacion@extremadura.ccoo.es">educacion@extremadura.ccoo.es</a></p>
+    </div>
+
+    <div class="footer-col">
+      <h3>Enlaces rápidos</h3>
+      <p><a href="https://extremadura.fe.ccoo.es/" target="_blank">Web FECCOOExtremadura</a></p>
+      <p><a href="https://www.facebook.com/feccooex" target="_blank">Facebook FECCOOEx</a></p>
+      <p><a href="https://x.com/FECCOOex" target="_blank">X (Twitter) FECCOOEx</a></p>
+      <p><a href="https://www.instagram.com/feccooex" target="_blank">Instagram FECCOOEx</a></p>
+      <p><a href="https://t.me/feccooextremadura" target="_blank">Canal de Telegram FECCOOExtremadura</a></p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <div class="footer-bottom-left">
+      <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" alt="Licencia CC BY-ND">
+      <span>Contenido bajo licencia Creative Commons BY-ND 4.0 (se permite compartir sin modificaciones y con atribución).</span>
+    </div>
+    <div class="footer-bottom-right">
+      © <span id="anio-footer"></span> Federación de Enseñanza de CCOO de Extremadura
+    </div>
+  </div>
+</footer>
+
 <script>
-  const EMAIL_DESTINO = "educacion@extremadura.ccoo.es";
+  document.getElementById("anio-footer").textContent = new Date().getFullYear();
 
-  function parseCSV(text) {
-    const lines = text.trim().split(/\r?\n/);
-    const delimiter = lines[0].includes(";") ? ";" : ",";
-    const headers = lines[0].split(delimiter).map(h => h.trim());
-    return lines.slice(1).map(l => {
-      const cols = l.split(delimiter).map(c => c.trim());
-      const obj = {};
-      headers.forEach((h,i) => obj[h] = cols[i] || "");
-      return obj;
-    });
-  }
+  // En GitHub Pages no se puede "enviar" un formulario a servidor sin backend.
+  // Solución operativa: preparar un correo con los datos y abrir el cliente de correo del usuario.
+  const form = document.getElementById("form-consultas");
+  const ok = document.getElementById("ok");
+  const err = document.getElementById("err");
 
-  async function cargarTemas() {
-    const select = document.getElementById("tema");
-    try {
-      const resp = await fetch("tema_consulta.csv", { cache: "no-store" });
-      const text = await resp.text();
-      const rows = parseCSV(text);
+  form.addEventListener("submit", (e) => {
+    e.preventDefault();
+    ok.style.display = "none";
+    err.style.display = "none";
 
-      select.innerHTML = '<option value="">Selecciona un tema…</option>';
-      rows
-        .filter(r => !r.activo || r.activo === "1")
-        .forEach(r => {
-          const opt = document.createElement("option");
-          opt.value = r.tema;
-          opt.textContent = r.tema;
-          select.appendChild(opt);
-        });
-    } catch {
-      select.innerHTML = '<option value="">No se pudieron cargar las temáticas</option>';
+    const nombre = document.getElementById("nombre").value.trim();
+    const correo = document.getElementById("correo").value.trim();
+    const telefono = document.getElementById("telefono").value.trim();
+    const tema = document.getElementById("tema").value.trim();
+    const centro = document.getElementById("centro").value.trim();
+    const mensaje = document.getElementById("mensaje").value.trim();
+
+    if(!nombre || !correo || !tema || !mensaje){
+      err.style.display = "block";
+      return;
     }
-  }
 
-  document.addEventListener("DOMContentLoaded", () => {
-    cargarTemas();
+    const to = "educacion@extremadura.ccoo.es";
+    const subject = encodeURIComponent(`[Consulta] ${tema} · ${nombre}`);
+    const body = encodeURIComponent(
+      `Nombre: ${nombre}\n` +
+      `Correo: ${correo}\n` +
+      (telefono ? `Teléfono: ${telefono}\n` : ``) +
+      (centro ? `Centro / localidad: ${centro}\n` : ``) +
+      `Tema: ${tema}\n\n` +
+      `Consulta:\n${mensaje}\n`
+    );
 
-    document.getElementById("btn-limpiar").onclick = () => {
-      document.getElementById("form-consultas").reset();
-    };
-
-    document.getElementById("form-consultas").onsubmit = e => {
-      e.preventDefault();
-
-      const subject = `[Consultas FECCOOEx] ${tema.value} — ${asunto.value}`;
-      const body = `
-Nombre: ${nombre.value}
-Email: ${email.value}
-Teléfono: ${telefono.value || "-"}
-Centro/Servicio: ${centro.value || "-"}
-Municipio: ${municipio.value || "-"}
-Tema: ${tema.value}
-
-Consulta:
-${mensaje.value}
-      `.trim();
-
-      window.location.href =
-        `mailto:${EMAIL_DESTINO}?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
-    };
+    ok.style.display = "block";
+    window.location.href = `mailto:${to}?subject=${subject}&body=${body}`;
   });
 </script>
 
